log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
  namespace: logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes: # Define volume
        - name: shared-image
          persistentVolumeClaim:
            claimName: logoutput-claim
      containers:
        - name: logoutput
          image: pekkamattinen/logoutput:12
          volumeMounts:
            - name: shared-image
              mountPath: /opt/app/files
        - name: logreader
          image: pekkamattinen/logreader:04
          volumeMounts:
            - name: shared-image
              mountPath: /opt/app/files
