log-output/manifests/psql_service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: psql-svc
  namespace: logoutput
  labels:
    app: psql
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: psqlapp
