log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashresponse-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - name: logout-port
      port: 2345
      protocol: TCP
      targetPort: 3003
    # - name: pingpong-port
    #   port: 3001
    #   protocol: TCP
    #   targetPort: 2346
